[package]
name = "rust-cli-app"
version = "0.1.0"
authors = ["Yuichiro Aoki"]
description = "Rust CLI App"
repository = "https://github.com/yuichiroaoki/rust-cli-app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version="0.11.10", features = ["blocking", "json"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }