[package]
name = "polygon-node-manager"
version = "0.1.0"
authors = ["Yuichiro Aoki"]
description = "Polygon Node Manager"
repository = "https://github.com/yuichiroaoki/polygon-node-manager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version="0.11.10", features = ["blocking", "json"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
sysinfo = "0.23.11"
serde = {version = "1.0.137", features = ["derive"]}
clokwerk = "0.4.0-rc1"
log = "0.4.0"
env_logger = "0.8.4"